fix(cfx-ui): better contrast for servers list search input suggests

--- a/ext/cfx-ui/src/app/servers/components/filters/server-filter.component.scss
+++ b/ext/cfx-ui/src/app/servers/components/filters/server-filter.component.scss
@@ -109,7 +109,17 @@
 
 			@include theme using ($theme) {
 				color: gtv($theme, secondaryColor);
+
+				&:focus {
+					box-shadow: 2px 2px 0 0 gtv($theme, accentColor1) inset, -2px 0 0 0 gtv($theme, accentColor1) inset;
+				}
 			};
+		}
+
+		input:focus + .search-dropdown {
+			transform: translateY(0);
+			opacity: 1;
+			pointer-events: all;
 		}
 
 		.search-dropdown {
@@ -127,16 +137,10 @@
 			opacity: 0;
 			pointer-events: none;
 
-			transition: all .2s ease;
-
-			&.active {
-				transform: translateY(0);
-				opacity: 1;
-				pointer-events: all;
-			}
-
 			@include theme() using ($theme) {
-				background-color: gtv($theme, bgColor);
+				background-color: rgba(gtv($theme, accentColor1), .1);
+				border: solid 2px gtv($theme, accentColor1);
+				border-top: none;
 			}
 
 			ul {
@@ -158,11 +162,16 @@
 						h4 + span {
 							font-size: 0.7em;
 
-							color: desaturate(darken(gtv($theme, fgColor), 10%), 20%);
+							color: gtv($theme, fgColor);
 						}
 
 						&:hover, &.active {
-							background-color: rgba(lighten(gtv($theme, bgColor), 15%), 1);
+							h4,
+							h4 + span {
+								color: gtv($theme, accentContrastColor);
+							}
+
+							background-color: gtv($theme, accentColor1);
 						}
 					};
 				}
